--- a/ScreenShareSetupUI/ScreenShareSetupUI.entitlements
+++ b/ScreenShareSetupUI/ScreenShareSetupUI.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.vdotok.broadcast</string>
+		<string>group.com.norgic.combined.broadcast</string>
 	</array>
 </dict>
 </plist>
