--- a/iOS-combine.xcodeproj/xcshareddata/xcschemes/iOS-combine.xcscheme
+++ b/iOS-combine.xcodeproj/xcshareddata/xcschemes/iOS-combine.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1250"
+   LastUpgradeVersion = "1300"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "5D57DAC42642964700515FEA"
-               BuildableName = "iOS-combine.app"
-               BlueprintName = "iOS-combine"
-               ReferencedContainer = "container:iOS-combine.xcodeproj">
+               BlueprintIdentifier = "5D8199B226DCC10100B37B72"
+               BuildableName = "IOS-combine.app"
+               BlueprintName = "IOS-combine"
+               ReferencedContainer = "container:IOS-combine.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -44,10 +44,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5D57DAC42642964700515FEA"
-            BuildableName = "iOS-combine.app"
-            BlueprintName = "iOS-combine"
-            ReferencedContainer = "container:iOS-combine.xcodeproj">
+            BlueprintIdentifier = "5D8199B226DCC10100B37B72"
+            BuildableName = "IOS-combine.app"
+            BlueprintName = "IOS-combine"
+            ReferencedContainer = "container:IOS-combine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -61,10 +61,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "5D57DAC42642964700515FEA"
-            BuildableName = "iOS-combine.app"
-            BlueprintName = "iOS-combine"
-            ReferencedContainer = "container:iOS-combine.xcodeproj">
+            BlueprintIdentifier = "5D8199B226DCC10100B37B72"
+            BuildableName = "IOS-combine.app"
+            BlueprintName = "IOS-combine"
+            ReferencedContainer = "container:IOS-combine.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
