--- a/watch WatchKit Extension/watch WatchKit Extension.entitlements
+++ b/watch WatchKit Extension/watch WatchKit Extension.entitlements
@@ -5,14 +5,8 @@
 	<key>com.apple.developer.healthkit</key>
 	<true/>
 	<key>com.apple.developer.healthkit.access</key>
-	<array>
-		<string>health-records</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.healthkit.background-delivery</key>
 	<true/>
-	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.com.norgic.combined.broadcast</string>
-	</array>
 </dict>
 </plist>
