--- a/IOS-combine/Info.plist
+++ b/IOS-combine/Info.plist
@@ -26,6 +26,10 @@
 	<dict/>
 	<key>NSCameraUsageDescription</key>
 	<string>This app wants to take pictures.</string>
+	<key>NSHealthShareUsageDescription </key>
+	<string>This app wants your health data</string>
+	<key>NSHealthUpdateUsageDescription </key>
+	<string>This app wants your health data</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>This app wants to record audio</string>
 	<key>NSPhotoLibraryUsageDescription</key>
